--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,7 @@
 
 
 [platformio]
-default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, s2_mini_SK6812_RGBW_COLD, s2_mini_SK6812_RGBW_NEUTRAL, s2_mini_WS281x_RGB, esp8266_SK6812_RGBW_COLD, esp8266_SK6812_RGBW_NEUTRAL, esp8266_WS281x_RGB
+default_envs = SK6812_RGBW_COLD, SK6812_RGBW_NEUTRAL, WS281x_RGB, s2_mini_SK6812_RGBW_COLD, s2_mini_SK6812_RGBW_NEUTRAL, c6_WS281x_RGB, esp8266_SK6812_RGBW_COLD, esp8266_SK6812_RGBW_NEUTRAL, esp8266_WS281x_RGB
 
 [env]
 framework = arduino
@@ -86,15 +86,15 @@ platform = ${esp32_lolin_s2_mini.platform}
 lib_deps = ${esp32_lolin_s2_mini.lib_deps}
 test_ignore = ${esp32_lolin_s2_mini.test_ignore}
 
-[env:s2_mini_WS281x_RGB]
+[env:c6_WS281x_RGB]
 build_flags = -DNEOPIXEL_RGB -DDATA_PIN=2 ${env.build_flags}
-custom_prog_version = esp32_s2_mini_WS281x_RGB
+custom_prog_version = esp32_c6_WS281x_RGB
 
-board = lolin_s2_mini
-board_build.mcu = esp32s2
-platform = ${esp32_lolin_s2_mini.platform}
-lib_deps = ${esp32_lolin_s2_mini.lib_deps}
-test_ignore = ${esp32_lolin_s2_mini.test_ignore}
+board = esp32_c6
+board_build.mcu = esp32c6
+platform = ${esp32_c6.platform}
+lib_deps = ${esp32_c6.lib_deps}
+test_ignore = ${esp32_c6.test_ignore}
 
 ;==========================================================
 ; ESP8266 board
