--- a/platformio.ini
+++ b/platformio.ini
@@ -86,7 +86,7 @@ platform = ${esp32_lolin_s2_mini.platform}
 lib_deps = ${esp32_lolin_s2_mini.lib_deps}
 test_ignore = ${esp32_lolin_s2_mini.test_ignore}
 
-[env:c6_WS281x_RGB]
+[env:esp32_c6_WS281x_RGB]
 build_flags = -DNEOPIXEL_RGB -DDATA_PIN=2 ${env.build_flags}
 custom_prog_version = esp32_c6_WS281x_RGB
 
